include steps label and stesteps count fix

--- a/2200/Base.lproj/Main.storyboard
+++ b/2200/Base.lproj/Main.storyboard
@@ -151,7 +151,9 @@
                                     <constraint firstAttribute="width" constant="313" id="GUg-mV-Mqp">
                                         <variation key="heightClass=regular-widthClass=compact" constant="200"/>
                                     </constraint>
-                                    <constraint firstAttribute="height" constant="162" id="zCg-ZP-MBY"/>
+                                    <constraint firstAttribute="height" constant="162" id="zCg-ZP-MBY">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="172"/>
+                                    </constraint>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -206,7 +208,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="MLa-IX-9iY" firstAttribute="top" secondItem="fqP-Oi-ma3" secondAttribute="top" constant="-70" id="5a9-t5-jsH"/>
+                            <constraint firstItem="MLa-IX-9iY" firstAttribute="top" secondItem="fqP-Oi-ma3" secondAttribute="top" constant="-70" id="5a9-t5-jsH">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-76"/>
+                            </constraint>
                             <constraint firstItem="XGx-A7-NNv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="16" id="7rf-dV-bmh">
                                 <variation key="heightClass=regular-widthClass=compact" constant="14"/>
                             </constraint>
@@ -217,11 +221,11 @@
                                 <variation key="widthClass=compact" constant="180"/>
                             </constraint>
                             <constraint firstItem="XGx-A7-NNv" firstAttribute="top" secondItem="Ft8-nR-PNc" secondAttribute="bottom" constant="62" id="Dds-vD-dLj">
-                                <variation key="heightClass=regular-widthClass=compact" constant="62"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="74"/>
                             </constraint>
                             <constraint firstAttribute="centerX" secondItem="EMA-ct-ykQ" secondAttribute="centerX" id="GSb-aO-FHV"/>
                             <constraint firstItem="MLa-IX-9iY" firstAttribute="trailing" secondItem="fqP-Oi-ma3" secondAttribute="trailing" constant="23" id="JrQ-tU-wkS">
-                                <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="48"/>
                             </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="Ft8-nR-PNc" secondAttribute="trailing" constant="-16" id="N7g-Mu-g6h"/>
                             <constraint firstItem="MBo-Pb-enh" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="N90-pw-nXh"/>
@@ -237,7 +241,7 @@
                             <constraint firstItem="MBo-Pb-enh" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="dab-u3-bUU"/>
                             <constraint firstItem="Ft8-nR-PNc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="kfo-DD-OTm"/>
                             <constraint firstItem="MLa-IX-9iY" firstAttribute="top" secondItem="Ft8-nR-PNc" secondAttribute="top" constant="150" id="rg7-9E-G0B">
-                                <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="88"/>
                             </constraint>
                             <constraint firstItem="Ft8-nR-PNc" firstAttribute="top" secondItem="NEh-sb-uKr" secondAttribute="bottom" id="ua0-v5-TCH"/>
                         </constraints>
@@ -311,6 +315,7 @@
                     <tabBarItem key="tabBarItem" systemItem="featured" id="RTz-MT-dyO"/>
                     <connections>
                         <outlet property="lblGoal" destination="EMA-ct-ykQ" id="6EK-34-JRF"/>
+                        <outlet property="lblSteps" destination="K5x-h7-0s7" id="TF9-4N-akh"/>
                         <outlet property="weightPicker" destination="MLa-IX-9iY" id="ZMh-AB-6zZ"/>
                     </connections>
                 </viewController>
@@ -368,7 +373,7 @@
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                                     </variation>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="83Kg" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xnj-y9-WAb">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="83Kg in 14 days" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xnj-y9-WAb">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
